제품페이지 추가

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -40,6 +40,14 @@ header {
         position: relative;
         padding-bottom: 0px;
 
+        a {
+          color: white;
+
+          &:hover {
+            color: #EA094B;
+          }
+        }
+
         &::after {
           transition: width 0.5s ease-in-out;
           content: '';
@@ -143,6 +151,10 @@ header.on {
   #gnb {
     li {
       color: #111;
+
+      a {
+        color: #111;
+      }
     }
   }
 }
