--- a/src/css/_event.scss
+++ b/src/css/_event.scss
@@ -1,17 +1,17 @@
-.sub-bg {
-  background-image: url(../../public/image/eventSubVisual.jpg);
-  background-position: center;
-  width: 100%;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+// .sub-bg {
+//   background-image: url(../../public/image/eventSubVisual.jpg);
+//   background-position: center;
+//   width: 100%;
+//   height: 300px;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
 
-  em {
-    color: #fff;
-    font-size: 48px;
-  }
-}
+//   em {
+//     color: #fff;
+//     font-size: 48px;
+//   }
+// }
 
 .sub-wrap {
   display: flex;
