--- a/src/css/style.css
+++ b/src/css/style.css
@@ -71,6 +71,12 @@ header nav #gnb > li {
   position: relative;
   padding-bottom: 0px;
 }
+header nav #gnb > li a {
+  color: white;
+}
+header nav #gnb > li a:hover {
+  color: #EA094B;
+}
 header nav #gnb > li::after {
   transition: width 0.5s ease-in-out;
   content: "";
@@ -158,9 +164,13 @@ header.on {
 header.on #gnb li {
   color: #111;
 }
+header.on #gnb li a {
+  color: #111;
+}
 
 main {
   width: 100%;
+  position: relative;
 }
 
 .main {
@@ -340,20 +350,6 @@ footer .social li {
   font-size: 24px;
 }
 
-.sub-bg {
-  background-image: url(../../public/image/eventSubVisual.jpg);
-  background-position: center;
-  width: 100%;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.sub-bg em {
-  color: #fff;
-  font-size: 48px;
-}
-
 .sub-wrap {
   display: flex;
   flex-direction: column;
@@ -380,5 +376,50 @@ footer .social li {
   justify-content: center;
   align-items: center;
   z-index: 1001;
+}
+
+.beige-bg {
+  position: absolute;
+  background-color: #f5f0e9;
+  width: 100%;
+  height: 100vh;
+  bottom: 0;
+  z-index: -1000;
+}
+
+.sortitems {
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sortitems ul {
+  margin-bottom: 0;
+  padding: 10px 0;
+}
+.sortitems ul li {
+  display: inline-block;
+  padding: 0 40px;
+  font-size: 18px;
+  text-align: center;
+  margin: 0px 10px;
+  cursor: pointer;
+}
+.sortitems ul li::after {
+  content: "";
+  width: 0%;
+  display: block;
+  height: 2px;
+  background-color: transparent;
+  transition: all 0.5s;
+}
+.sortitems ul li:hover {
+  color: #EA094B;
+}
+.sortitems ul li:hover::after {
+  background-color: #EA094B;
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
