--- a/src/css/_beige-bg.scss
+++ b/src/css/_beige-bg.scss
@@ -2,7 +2,7 @@
   position: absolute;
   background-color: #f5f0e9;
   width: 100%;
-  height: 100vh;
+  height: 50%;
   bottom: 0;
   z-index: -1000;
 }
