--- a/src/css/style.css
+++ b/src/css/style.css
@@ -382,7 +382,7 @@ footer .social li {
   position: absolute;
   background-color: #f5f0e9;
   width: 100%;
-  height: 100vh;
+  height: 50%;
   bottom: 0;
   z-index: -1000;
 }
@@ -411,7 +411,7 @@ footer .social li {
   content: "";
   width: 0%;
   display: block;
-  height: 2px;
+  height: 4px;
   background-color: transparent;
   transition: all 0.5s;
 }
@@ -421,5 +421,52 @@ footer .social li {
 .sortitems ul li:hover::after {
   background-color: #EA094B;
   width: 100%;
+}
+
+.card {
+  cursor: pointer;
+}
+.card .card-title {
+  font-weight: bold;
+}
+
+.cate {
+  position: absolute;
+  top: 1rem;
+  padding: 8px 16px;
+  color: white;
+  background-color: #EA094B;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cate:hover {
+  opacity: 0.8;
+}
+
+.detail {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 5% 0;
+}
+.detail article {
+  text-align: center;
+}
+.detail .tolist {
+  padding: 20px 40px;
+  font-size: 24px;
+  color: white;
+  background-color: tan;
+  cursor: pointer;
+  margin-top: 2%;
+  border-radius: 10px;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.detail .tolist:hover {
+  opacity: 1;
 }
 /*# sourceMappingURL=style.css.map */
