--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -67,6 +67,7 @@ header {
 
         >.sub {
           position: absolute;
+          background-color: rgba(0, 0, 0, 0.1);
           top: 100px;
           left: 0;
           width: 100%;
@@ -81,6 +82,8 @@ header {
 
           &.on {
             display: block;
+            background-color: #fff;
+            transition: all 0.3s;
             opacity: 1;
           }
           
@@ -131,17 +134,19 @@ header {
   top: 100px;
   width: 100%;
   height: 300px;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.1);
   border-bottom: 0;
-  opacity: 0;
+  // opacity: 0;
   transition: all 0.3s;
-  z-index: 1;
+
   
   
   &.on {
+    background-color: #fff;
     border-bottom: 1px solid #eee;
     opacity: 1;
-
+    z-index: 1;
+    transition: all 0.3s;
   }
 }
 
