--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,6 +93,7 @@ header nav #gnb > li:hover::after {
 }
 header nav #gnb > li > .sub {
   position: absolute;
+  background-color: rgba(0, 0, 0, 0.1);
   top: 100px;
   left: 0;
   width: 100%;
@@ -105,6 +106,8 @@ header nav #gnb > li > .sub {
 }
 header nav #gnb > li > .sub.on {
   display: block;
+  background-color: #fff;
+  transition: all 0.3s;
   opacity: 1;
 }
 header nav #gnb > li > .sub > li {
@@ -146,15 +149,16 @@ header .ask li {
   top: 100px;
   width: 100%;
   height: 300px;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.1);
   border-bottom: 0;
-  opacity: 0;
   transition: all 0.3s;
-  z-index: 1;
 }
 .sub-wrapper.on {
+  background-color: #fff;
   border-bottom: 1px solid #eee;
   opacity: 1;
+  z-index: 1;
+  transition: all 0.3s;
 }
 
 header.on {
@@ -468,5 +472,74 @@ footer .social li {
 }
 .detail .tolist:hover {
   opacity: 1;
+}
+
+.header-placeholder {
+  width: 100%;
+  position: relative;
+  height: 100px;
+}
+
+.map_wrap {
+  position: relative;
+  height: 80vh;
+  background-color: #fff;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+}
+.map_wrap #map {
+  width: 100%;
+  height: 100%;
+}
+.map_wrap #menu_wrap {
+  width: 30%;
+  height: 100%;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+}
+.map_wrap #menu_wrap .option {
+  height: 50px;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+.map_wrap #menu_wrap form {
+  display: flex;
+  height: 50px;
+  width: 100%;
+}
+.map_wrap #menu_wrap form input {
+  width: 80%;
+}
+.map_wrap #menu_wrap form button {
+  width: 20%;
+  border: 0;
+  outline: 0;
+  background-color: crimson;
+  color: white;
+}
+
+#placesList li {
+  padding: 10px 20px;
+  border-bottom: 1px solid #eee;
+}
+#placesList li h5 {
+  font-weight: bold;
+}
+#placesList li span {
+  font-size: 12px;
+}
+
+#pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#pagination a {
+  font-size: 16px;
+  color: crimson;
+  padding: 5px;
 }
 /*# sourceMappingURL=style.css.map */
