AboutUS페이지 일부추가

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -78,6 +78,9 @@ header {
           opacity: 0;
           z-index: 20;
 
+          &:nth-last-child(1){
+            width: 100%;
+          }
 
 
           &.on {
@@ -136,7 +139,7 @@ header {
   height: 300px;
   background-color: rgba(0, 0, 0, 0.1);
   border-bottom: 0;
-  // opacity: 0;
+  opacity: 0;
   transition: all 0.3s;
 
   
@@ -164,6 +167,12 @@ header.on {
   }
 }
 
+.header-placeholder {
+  width: 100%;
+  position: relative;
+  height: 100px;
+  background-color: rgba($color: #000000, $alpha: 0.7);
+}
 
 
 
