--- a/src/css/_kakaomap.scss
+++ b/src/css/_kakaomap.scss
@@ -1,8 +1,4 @@
-.header-placeholder {
-  width: 100%;
-  position: relative;
-  height: 100px;
-}
+
 
 .map_wrap {
   position: relative;
@@ -12,6 +8,7 @@
   flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
+  // z-index: -1000;
 
   #map {
     width: 100%;
@@ -38,6 +35,7 @@
 
       input {
         width: 80%;
+        padding-left: 10%;
       }
 
       button {
@@ -77,3 +75,20 @@
     padding: 5px;
   }
 }
+
+.select-wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 10px 20px;
+
+  #selectlocation {
+    width: 20%;
+    border: 0;
+    outline: 0;
+    font-size: 1.125rem;
+  }
+}
+
