--- a/src/css/_hero.scss
+++ b/src/css/_hero.scss
@@ -3,12 +3,11 @@ main {
   position: relative;
 }
 
-
 .main {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url('../../public/image/mainbg0.jpg');
+  background-image: url("../../public/image/mainbg0.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -16,6 +15,7 @@ main {
   flex-direction: row-reverse;
   justify-content: space-around;
   align-items: center;
+  padding-right: 30%;
 
   p {
     color: white;
@@ -43,29 +43,45 @@ main {
     a {
       color: white;
       display: block;
+      width: 30%;
       padding: 10px 20px;
       text-transform: uppercase;
+      border: 1px solid #fff;
+      text-align: center;
+      transition: all 0.3s;
+      margin-left: 20px;
+
+      &:hover {
+        background-color: #fff;
+        color: #311;
+      }
     }
   }
 }
 
 .main2 {
-  background-image: url('../../public/image/mainbg1.jpg');
+  background-image: url("../../public/image/mainbg1.jpg");
   p {
     color: #311;
   }
 
   article {
     h1 {
-    color: #311;
-  }
+      color: #311;
+    }
 
     p {
-    color: #311;
-  }
+      color: #311;
+    }
 
     a {
-     color: #311
-   };
+      color: #311;
+      border: 1px solid #311;
+
+      &:hover {
+        background-color: #311;
+        color: #fff;
+      }
+    }
   }
 }
