--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,17 +1,17 @@
-@use 'reset';
-@use 'nothing';
-@use 'header';
-@use 'hero';
-@use 'banner';
-@use 'footer';
-@use 'swiper';
-@use 'topbtn';
+@use "reset";
+@use "nothing";
+@use "header";
+@use "hero";
+@use "banner";
+@use "footer";
+@use "swiper";
+@use "topbtn";
 
-@use 'event';
-@use 'login';
-@use 'beige-bg';
-@use 'items';
-@use 'detail';
-@use 'kakaomap';
-@use 'brandhistory';
-@use 'brandprinciple';
+@use "event";
+@use "login";
+@use "beige-bg";
+@use "items";
+@use "detail";
+@use "kakaomap";
+@use "brandhistory";
+@use "brandprinciple";
