--- a/src/css/_banner.scss
+++ b/src/css/_banner.scss
@@ -1,23 +1,21 @@
 .main-banner {
-  width: 100%;
   background-color: rgb(56, 46, 44);
   padding: 10% 5%;
-  display: flex;
-  overflow-x: visible;
 
   &-item {
     position: relative;
     overflow-x: visible;
-    margin-left: 10%;
-    margin-right: 10%;
+    // margin-left: 10%;
+    // margin-right: 10%;
     opacity: 0.7;
     transition: all 0.5s;
-    
+
     article {
+      padding: 5%;
+      background-color: rgba($color: #000000, $alpha: 0.3);
       position: absolute;
       overflow-x: visible;
       top: 10%;
-
 
       h1 {
         color: white;
@@ -34,8 +32,7 @@
         opacity: 0;
         transition: all 1s ease-in-out;
       }
-
-    }//article
+    } //article
 
     &:hover {
       opacity: 1;
