--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -1,14 +1,20 @@
 footer {
   width: 100%;
   height: 150px;
-  background-color: rgb(61,57,55);
+  background-color: rgb(61, 57, 55);
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0 5%;
 
   .footer-left {
     display: flex;
     flex-direction: column;
+
+    ul {
+      padding: 0;
+      margin: 0;
+    }
 
     ul li {
       display: inline-block;
@@ -20,8 +26,6 @@ footer {
       color: #fff;
       padding: 10px 20px;
     }
-
-  
   }
 
   .social {
@@ -30,6 +34,14 @@ footer {
       color: white;
       padding: 10px 20px;
       font-size: 30px;
+
+      a {
+        color: #fff;
+      }
+
+      i {
+        color: #fff;
+      }
     }
   }
-} 
+}
