--- a/src/css/_banner.scss
+++ b/src/css/_banner.scss
@@ -5,24 +5,28 @@
   &-item {
     position: relative;
     overflow-x: visible;
-    // margin-left: 10%;
-    // margin-right: 10%;
     opacity: 0.7;
     transition: all 0.5s;
+    margin: 0 5%;
+
+    img {
+      object-fit: contain;
+    }
 
     article {
-      padding: 5%;
+      padding: 5% 10%;
       background-color: rgba($color: #000000, $alpha: 0.3);
       position: absolute;
       overflow-x: visible;
       top: 10%;
 
-      h1 {
+      h2 {
         color: white;
         font-size: 56px;
-        transform: translateX(-20%);
+        transform: translateX(0%);
         transition: all 0.6s ease-in-out;
         white-space: nowrap;
+        opacity: 0.7;
       }
 
       p {
@@ -37,8 +41,8 @@
     &:hover {
       opacity: 1;
 
-      h1 {
-        transform: translateX(0);
+      h2 {
+        opacity: 1;
       }
 
       p {
@@ -47,5 +51,11 @@
         opacity: 1;
       }
     }
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .main-banner {
+    display: none;
   }
 }
