--- a/src/css/_brandhistory.scss
+++ b/src/css/_brandhistory.scss
@@ -36,14 +36,14 @@
     width: 100%;
     display: flex;
     align-items: flex-end;
-    justify-content: space-between;
+    // justify-content: space-between;
     margin-left: 100px;
     margin-top: 5px;
 
     li {
       text-align: center;
       white-space: nowrap;
-      margin-right: 100px;
+      padding-right: 5%;
       line-height: 1.5;
       font-size: 18px;
 
