--- a/src/css/_event.scss
+++ b/src/css/_event.scss
@@ -19,9 +19,17 @@
   align-items: center;
   padding: 0% 10%;
 
+  figure {
+    width: 70%;
+
+    img {
+      width: 100%;
+    }
+  }
+
   p {
     padding: 20px 10%;
-    font-size: 36px;
+    font-size: 2vw;
     border-bottom: 1px solid #eee;
   }
 
