--- a/src/css/_hero.scss
+++ b/src/css/_hero.scss
@@ -6,15 +6,18 @@ main {
 .main {
   position: relative;
   width: 100%;
-  height: 100vh;
+  min-height: 80vh;
+  max-height: 100vh;
   background-image: url("../../public/image/mainbg0.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  background-attachment: fixed;
+  background-position: center;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-around;
   align-items: center;
+  padding-left: 10%;
   padding-right: 30%;
 
   p {
@@ -81,6 +84,41 @@ main {
       &:hover {
         background-color: #311;
         color: #fff;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .main2 {
+    // background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+  }
+
+  .main {
+    margin-top: 100px;
+    min-height: 12vh;
+    background-size: cover;
+
+    article {
+      width: 100%;
+      min-height: 200px;
+
+      h1 {
+        font-size: 24px;
+        font-weight: bold;
+      }
+
+      p {
+        font-size: 14px;
+      }
+
+      a {
+        font-size: 12px;
+        padding: 5px 10px;
+        width: 50%;
       }
     }
   }
