--- a/src/css/_kakaomap.scss
+++ b/src/css/_kakaomap.scss
@@ -1,5 +1,3 @@
-
-
 .map_wrap {
   position: relative;
   height: 80vh;
@@ -45,7 +43,7 @@
         background-color: crimson;
         color: white;
       }
-    }//form
+    } //form
   }
 }
 
@@ -69,7 +67,7 @@
   justify-content: center;
   align-items: center;
 
-  a{
+  a {
     font-size: 16px;
     color: crimson;
     padding: 5px;
@@ -92,3 +90,8 @@
   }
 }
 
+@media screen and (max-width: 780px) {
+  .map_wrap #menu_wrap {
+    width: 100%;
+  }
+}
