--- a/src/css/_reset.scss
+++ b/src/css/_reset.scss
@@ -16,7 +16,8 @@ body * {
   box-sizing: border-box;
 }
 
-html {
-  font-family: 'Noto Sans KR', 'Roboto', sans-serif;
+html,
+body {
+  font-family: "Noto Sans KR", "Roboto", sans-serif;
   font-size: 14px;
 }
