--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -33,8 +33,9 @@ header {
 
   nav {
     position: absolute;
-    width: 900px;
-    left: calc(50% - 450px);
+    width: 70%;
+    left: 50%;
+    transform: translateX(-50%);
     display: block;
     height: 100%;
     margin: 0 auto;
@@ -48,7 +49,7 @@ header {
       > li {
         display: inline-block;
         color: white;
-        width: 150px;
+        width: calc(100% / 6);
         line-height: 130px;
         text-indent: 10px;
         white-space: nowrap;
@@ -242,15 +243,18 @@ header.on {
     background-color: #444;
 
     nav {
+      width: 120%;
       position: fixed;
+      height: 100%;
       display: flex;
       top: 0;
       left: 0;
       box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.5);
+      z-index: 1000;
 
       #gnb {
         position: fixed;
-        left: 0;
+        left: 50%;
         width: 50%;
         margin-left: 0;
         display: flex;
@@ -258,10 +262,12 @@ header.on {
         justify-content: flex-start;
         background-color: #fff;
         box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.5);
+        z-index: 1000;
 
         li:nth-child(1) {
           text-align: right;
           width: 100%;
+          z-index: 1000;
         }
 
         .fa-close {
@@ -276,6 +282,7 @@ header.on {
           color: #111;
           line-height: 50px;
           padding: 20px 0;
+          border-bottom: 1px solid #ddd;
         }
       }
     }
