--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,24 +62,27 @@ header .header-right i {
 }
 header nav {
   position: absolute;
-  width: 70%;
+  width: 60%;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   display: block;
-  height: 100%;
+  height: 40%;
   margin: 0 auto;
 }
 header nav #gnb {
   width: 100%;
   height: 100%;
+  margin-bottom: 0;
   z-index: 100;
   padding: 0;
 }
 header nav #gnb > li {
   display: inline-block;
+  height: 100%;
   color: white;
   width: 16.6666666667%;
-  line-height: 130px;
+  padding: 10px 0;
   text-indent: 10px;
   white-space: nowrap;
   position: relative;
@@ -92,13 +95,13 @@ header nav #gnb > li a:hover {
   color: #ea094b;
 }
 header nav #gnb > li::after {
+  position: absolute;
+  bottom: 0;
   transition: width 0.5s ease-in-out;
   content: "";
   width: 0%;
 }
 header nav #gnb > li:hover::after {
-  position: absolute;
-  bottom: 0;
   content: "";
   display: block;
   width: 95%;
@@ -108,7 +111,7 @@ header nav #gnb > li:hover::after {
 header nav #gnb > li > .sub {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.1);
-  top: 100px;
+  top: 41px;
   left: 0;
   width: 100%;
   height: 300px;
@@ -246,19 +249,20 @@ header.on #gnb li a {
     display: flex;
     top: 0;
     left: 0;
+    background-color: #fff;
     box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.5);
     z-index: 1000;
   }
   header nav #gnb {
     position: fixed;
     left: 50%;
+    height: 50%;
     width: 50%;
     margin-left: 0;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     background-color: #fff;
-    box-shadow: 0 0 0 50vmax rgba(0, 0, 0, 0.5);
     z-index: 1000;
   }
   header nav #gnb li:nth-child(1) {
@@ -275,7 +279,7 @@ header.on #gnb li a {
   header nav #gnb li {
     width: 100%;
     color: #111;
-    line-height: 50px;
+    height: 50%;
     padding: 20px 0;
     border-bottom: 1px solid #ddd;
   }
@@ -406,15 +410,12 @@ main {
   padding: 10% 5%;
 }
 .main-banner-item {
+  width: 100%;
   position: relative;
   overflow-x: visible;
   opacity: 0.7;
   transition: all 0.5s;
   margin: 0 5%;
-}
-.main-banner-item img {
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 .main-banner-item article {
   padding: 5% 10%;
@@ -527,6 +528,7 @@ footer .social li i {
   font-size: 20px;
   font-style: italic;
   color: #fff;
+  text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
   text-align: right;
   padding-right: 5%;
 }
