--- a/src/css/_swiper.scss
+++ b/src/css/_swiper.scss
@@ -1,21 +1,20 @@
-.swiper-button-next{
+.swiper-button-next {
   color: #555;
 }
-.swiper-button-prev{
+.swiper-button-prev {
   color: #555;
 }
 
-.swiper-pagination{
-
-  &-fraction{
- 
-  width: 100%;
-  bottom : 20%;
-  font-size: 20px;
-  font-style: italic;
-  color: #fff;
-  text-align: right;
-  padding-right: 5%;
+.swiper-pagination {
+  &-fraction {
+    width: 100%;
+    bottom: 20%;
+    font-size: 20px;
+    font-style: italic;
+    color: #fff;
+    text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+    text-align: right;
+    padding-right: 5%;
   }
 
   &-current {
@@ -26,4 +25,3 @@
 .swiper {
   z-index: 0;
 }
-
